# leodisk

./: AGENTS.md  README.md  index.html  package.json  skills-lock.json  vite.config.ts
.github/workflows/: release-windows.yml
src/: App.css  App.test.tsx  App.tsx  components.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: apps.rs  cleanup.rs  disk_scan.rs  lib.rs  main.rs  models.rs  purge.rs  startup.rs  state.rs  storage.rs  system.rs  util.rs  windows_metrics.rs  wiztree.rs
src/test/: setup.ts
