[package]
name = "leodisk"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "leodisk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
zip = { version = "2.4", default-features = false, features = ["deflate"] }
sysinfo = "=0.38.3"
# 5.2.x conflicts with sysinfo's macOS transitive pin during Cargo resolution,
# even for Windows builds; 4.1.1 exposes the same Windows Recycle Bin API.
trash = "=4.1.1"
walkdir = "2.5"
rayon = "1.10"
winreg = "0.56"
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Performance",
  "Win32_System_Power",
] }
